@@ -2,9 +2,34 @@
 
 # Minecraft Reimagined⚡
 
-[![Project Status: WIP](https://www.repostatus.org/badges/latest/wip.svg)](https://www.repostatus.org/#wip)
+[![Project Status: WIP](https://www.repostatus.org/badges/latest/active.svg)](https://www.repostatus.org/#active)
 [![License: BSD-3-Clause license](https://img.shields.io/badge/LICENSE-BSD--3--Clause-green.svg)](LICENSE)
 
 <img src="https://raw.githubusercontent.com/blue-pulse/minecraft-reimagined/main/assets/img/minecraft-reimagined.jpg" alt="minecraft-reimagined" width="500">
 
 </div>
+
+## Description
+
+**Minecraft Reimagined** is a straightforward modpack that enhances performance and graphics while introducing exciting new features like biomes, structures, and bosses. Built for Fabric 1.20.1, it comes in three versions to suit different needs:
+
+#### 🚀 Standard
+The basic modpack, perfect for players who want improved performance and visuals without any extra requirements.
+
+#### 🔥 Ultimate
+Packed with additional visual effects and enhancements, this version is ideal for players with more powerful computers seeking a richer experience.
+
+#### ⚙️ Server
+Specifically designed for server installations, this version allows you to host the modpack for multiplayer gameplay without extra client-side features.
+
+Dive in and enjoy a fresh take on Minecraft!
+
+## JVM Options
+
+To optimize your experience you can use the following JVM options:
+
+```
+-XX:+UseZGC -XX:+ZGenerational
+```
+
+These options enable the Z Garbage Collector, which helps reduce lag spikes 
